fixed spacing below tech btns

--- a/main.css
+++ b/main.css
@@ -100,6 +100,7 @@ nav ul li {
     padding: 14px 28px;
     border-radius: 4px;
     margin-right: 1em;
+    margin-bottom: 1em;
 }
 /* Projects Section */
 .projects__container {
